--- a/MPS-SPA/src/scss/_custom.scss
+++ b/MPS-SPA/src/scss/_custom.scss
@@ -1,1 +1,8 @@
 // Here you can add other styles
+.menu-children a {
+  padding-left: 40px !important;
+}
+
+.menu-grand-children a {
+  padding-left: 60px !important;
+}
